# lp1

./: Apresentação_TP.txt  structs.c  structs.h  tp03.md
lp1_ufp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lp1_ufp  lp1_ufp.cbp  main.c  pr00.c  pr00.h  pr01.c  pr01.h  pr02.c  pr02.h  pr03.c  pr03.h  pr04.c  pr04.h  pr05.c  pr05.h  pr06.h  pr07.h  pr08.h  pr09.c  pr09.h  pr10.c  pr10.h  pr11.h  pr12.h  pr13.h  tp02.h  tp03.c  tp03.h  tp04.c  tp04.h  tp05.c  tp05.h  tp06.c  tp06.h  tp07e08.c  tp07e08.h  (+8 more)
practice/: CMakeLists.txt  fun.c  fun.h  main.c
